[gd_scene load_steps=29 format=3 uid="uid://bcs0yxvg5jif7"]

[ext_resource type="Texture2D" uid="uid://dorus13serxf6" path="res://fondo/background2.png" id="1_b28t0"]
[ext_resource type="Script" path="res://LEVELS/level_1.gd" id="1_nw5by"]
[ext_resource type="PackedScene" uid="uid://bknc3gcysyx8e" path="res://player.tscn" id="1_rk528"]
[ext_resource type="Texture2D" uid="uid://djhoto6c4423v" path="res://Spritesbase/edificios destruidosver3.png" id="2_44yxh"]
[ext_resource type="Texture2D" uid="uid://vjo6uwqtgqll" path="res://Spritesbase/Spriteambiente/Prototipo_casa.png" id="2_t5j21"]
[ext_resource type="Texture2D" uid="uid://xngf36ojj0c7" path="res://Spritesbase/Spriteambiente/Prototipo_piso.png" id="2_uafuk"]
[ext_resource type="Texture2D" uid="uid://lwqa4tq5511u" path="res://Spritesbase/Spriteambiente/Apartamento fuera.png" id="2_v2qe0"]
[ext_resource type="Texture2D" uid="uid://l7gnsimpufpn" path="res://Spritesbase/edificios destruidosver2.png" id="3_m2se1"]
[ext_resource type="Texture2D" uid="uid://doj5skpdpn3w8" path="res://Spritesbase/Spriteambiente/Prototipo_casa2.png" id="3_vddbs"]
[ext_resource type="Script" path="res://Scripts/CAMARA/Camera2D.gd" id="4_3h5y3"]
[ext_resource type="PackedScene" uid="uid://dqhk1un4tek58" path="res://ESCENAS/enemy.tscn" id="6_rst54"]
[ext_resource type="Texture2D" uid="uid://cxk6101l1qn5i" path="res://Spritesbase/Spriteambiente/caja.png" id="7_g544p"]
[ext_resource type="Texture2D" uid="uid://dwccao2gg4t6u" path="res://Spritesbase/Life_bar.png" id="9_af6o5"]
[ext_resource type="Texture2D" uid="uid://dqdjb18vlerlf" path="res://Spritesbase/Spriteambiente/Apartamento dentro.png" id="10_dpshu"]
[ext_resource type="Texture2D" uid="uid://d0bxq1yl33wlh" path="res://Spritesbase/Spriteambiente/Entradaboss.png" id="11_n68yg"]
[ext_resource type="PackedScene" uid="uid://dhuefbm30ab85" path="res://ESCENAS/boss.tscn" id="16_fxplq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3g67"]
size = Vector2(56, 6.88417)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2m1g4"]
rough = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0e5r"]
size = Vector2(116.878, 5.97017)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nte0h"]
size = Vector2(112.53, 126.657)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqs2l"]
size = Vector2(83.2413, 43.7541)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7m0lw"]
size = Vector2(48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex606"]
size = Vector2(73, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gee31"]
size = Vector2(15, 232)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htmkr"]
size = Vector2(11.5, 165)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_eirb8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c7sw1"]
size = Vector2(13.5, 165)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vhbl"]
size = Vector2(15, 156)

[node name="level_1" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_nw5by")

[node name="GameManager" type="Node2D" parent="."]

[node name="Fondo" type="Node2D" parent="."]
position = Vector2(575.122, 79)
scale = Vector2(14.184, 3.6232)

[node name="Sprite2D2" type="Sprite2D" parent="Fondo"]
position = Vector2(32.4873, 0)
scale = Vector2(1.72194, 1)
texture = ExtResource("1_b28t0")

[node name="Sprite2D3" type="Sprite2D" parent="Fondo"]
modulate = Color(0.843137, 0.690196, 0.545098, 0.243137)
self_modulate = Color(0.843137, 0.690196, 0.545098, 0.47451)
position = Vector2(32.4928, -17.1465)
scale = Vector2(1.72182, 0.774999)
texture = ExtResource("1_b28t0")

[node name="Sprite2D4" type="Sprite2D" parent="Fondo"]
modulate = Color(0.843137, 0.690196, 0.545098, 0.47451)
position = Vector2(32.4928, -29.2904)
scale = Vector2(1.72182, 0.774999)
texture = ExtResource("1_b28t0")

[node name="Sprite2D5" type="Sprite2D" parent="Fondo"]
modulate = Color(0.843137, 0.690196, 0.545098, 0.47451)
position = Vector2(32.4927, -41.4344)
scale = Vector2(1.72182, 0.774999)
texture = ExtResource("1_b28t0")

[node name="Edificios4" type="Sprite2D" parent="Fondo"]
modulate = Color(0.901961, 0.784314, 0.635294, 0.964706)
position = Vector2(-6.00127, 16.8359)
rotation = -3.14159
scale = Vector2(0.0724312, -0.277307)
texture = ExtResource("2_v2qe0")
flip_h = true

[node name="Edificios3" type="Sprite2D" parent="Fondo"]
modulate = Color(0.831373, 0.678431, 0.482353, 0.643137)
position = Vector2(-13.122, 20.4239)
rotation = -3.14159
scale = Vector2(0.0529077, -0.20256)
texture = ExtResource("2_v2qe0")

[node name="Edificios" type="Sprite2D" parent="Fondo"]
modulate = Color(0.831373, 0.678431, 0.482353, 0.886275)
position = Vector2(-35.0621, 14.8021)
scale = Vector2(0.0580045, 0.212081)
texture = ExtResource("2_44yxh")

[node name="Edificios2" type="Sprite2D" parent="Fondo"]
modulate = Color(0.831373, 0.678431, 0.482353, 1)
position = Vector2(-26.5878, 9.47384)
rotation = -3.14159
scale = Vector2(0.0777795, -0.282923)
texture = ExtResource("3_m2se1")

[node name="Estructuras" type="Node2D" parent="."]

[node name="Casa1_1" type="StaticBody2D" parent="Estructuras"]
position = Vector2(101, 144.4)
scale = Vector2(0.832941, 0.832941)

[node name="Sprite2D" type="Sprite2D" parent="Estructuras/Casa1_1"]
position = Vector2(73.2345, 16.3276)
scale = Vector2(0.960453, 0.960453)
texture = ExtResource("3_vddbs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estructuras/Casa1_1"]
position = Vector2(75.5, -6)
shape = SubResource("RectangleShape2D_d3g67")
one_way_collision = true

[node name="Casa1_2" type="StaticBody2D" parent="Estructuras"]
position = Vector2(145, 144.4)
scale = Vector2(0.832941, 0.832941)

[node name="Sprite2D" type="Sprite2D" parent="Estructuras/Casa1_2"]
position = Vector2(74.435, 15.1271)
scale = Vector2(0.960453, 0.960453)
texture = ExtResource("3_vddbs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estructuras/Casa1_2"]
position = Vector2(75.5, -6)
shape = SubResource("RectangleShape2D_d3g67")
one_way_collision = true

[node name="Casa1_3" type="StaticBody2D" parent="Estructuras"]
position = Vector2(280, 144.4)
scale = Vector2(0.832941, 0.832941)

[node name="Sprite2D" type="Sprite2D" parent="Estructuras/Casa1_3"]
position = Vector2(76.8362, 23.531)
scale = Vector2(0.960453, 0.960453)
texture = ExtResource("2_t5j21")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estructuras/Casa1_3"]
position = Vector2(75.5, -5.44209)
shape = SubResource("RectangleShape2D_d3g67")
one_way_collision = true

[node name="Casa1_4" type="StaticBody2D" parent="Estructuras"]
position = Vector2(441, 144.4)
scale = Vector2(0.832941, 0.832941)

[node name="Sprite2D" type="Sprite2D" parent="Estructuras/Casa1_4"]
position = Vector2(73.2345, 16.3276)
scale = Vector2(0.960453, 0.960453)
texture = ExtResource("3_vddbs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estructuras/Casa1_4"]
position = Vector2(75.5, -6)
shape = SubResource("RectangleShape2D_d3g67")
one_way_collision = true

[node name="Casa1_5" type="StaticBody2D" parent="Estructuras"]
position = Vector2(485, 144.4)
scale = Vector2(0.832941, 0.832941)

[node name="Sprite2D" type="Sprite2D" parent="Estructuras/Casa1_5"]
position = Vector2(74.435, 15.1271)
scale = Vector2(0.960453, 0.960453)
texture = ExtResource("3_vddbs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estructuras/Casa1_5"]
position = Vector2(75.5, -6)
shape = SubResource("RectangleShape2D_d3g67")
one_way_collision = true

[node name="Player" parent="." instance=ExtResource("1_rk528")]
position = Vector2(19, 172)
jump_force = 380

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-15, -172)
scale = Vector2(125.156, -57.2394)
zoom = Vector2(3, 2.7)
limit_left = 0
limit_top = -19
limit_bottom = 39
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.65
drag_top_margin = 0.28
drag_right_margin = 0.0
drag_bottom_margin = 0.18
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("4_3h5y3")

[node name="Enemigos" type="Node2D" parent="."]

[node name="Enemy" parent="Enemigos" instance=ExtResource("6_rst54")]
position = Vector2(113, 177)

[node name="Enemy2" parent="Enemigos" instance=ExtResource("6_rst54")]
position = Vector2(253, 177)

[node name="Enemy3" parent="Enemigos" instance=ExtResource("6_rst54")]
position = Vector2(343, 122)

[node name="Enemy4" parent="Enemigos" instance=ExtResource("6_rst54")]
position = Vector2(450, 180)

[node name="Enemy5" parent="Enemigos" instance=ExtResource("6_rst54")]
z_index = 1
position = Vector2(892, 182)

[node name="Enemy6" parent="Enemigos" instance=ExtResource("6_rst54")]
z_index = 1
position = Vector2(528, 127)

[node name="Enemy7" parent="Enemigos" instance=ExtResource("6_rst54")]
z_index = 1
position = Vector2(1127, 180)

[node name="Enemy9" parent="Enemigos" instance=ExtResource("6_rst54")]
z_index = 1
position = Vector2(1307, 179)

[node name="Enemy8" parent="Enemigos" instance=ExtResource("6_rst54")]
position = Vector2(587, 179)

[node name="Enemy10" parent="Enemigos" instance=ExtResource("6_rst54")]
z_index = 1
position = Vector2(1220, 129)

[node name="Enemy11" parent="Enemigos" instance=ExtResource("6_rst54")]
z_index = 1
position = Vector2(1397, 173)

[node name="Edificios" type="Node2D" parent="."]
position = Vector2(743, 36)
scale = Vector2(1.94615, 1.73698)

[node name="Edificiodentro" type="Sprite2D" parent="Edificios"]
position = Vector2(-1.4782e-05, 0)
texture = ExtResource("10_dpshu")

[node name="Edificiofuera" type="Sprite2D" parent="Edificios"]
visible = false
modulate = Color(0.870588, 0.866667, 0.862745, 1)
texture = ExtResource("2_v2qe0")

[node name="Area2D" type="StaticBody2D" parent="Edificios"]
physics_material_override = SubResource("PhysicsMaterial_2m1g4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edificios/Area2D"]
position = Vector2(0.138275, 86.4633)
shape = SubResource("RectangleShape2D_m0e5r")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Edificios/Area2D"]
position = Vector2(0.256927, -23.6042)
shape = SubResource("RectangleShape2D_nte0h")

[node name="AreaEdificio" type="Area2D" parent="Edificios"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edificios/AreaEdificio"]
position = Vector2(1.02768, 61.6012)
shape = SubResource("RectangleShape2D_vqs2l")
debug_color = Color(0.286275, 0.121569, 0.184314, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.0980392, 0.0980392, 0.0980392, 0.160784)
position = Vector2(1064, 29)
scale = Vector2(24.3055, 6.73551)
texture = ExtResource("1_b28t0")

[node name="EscenarioBoss" type="Sprite2D" parent="."]
position = Vector2(1522.74, 113)
scale = Vector2(0.847368, 0.847368)
texture = ExtResource("11_n68yg")

[node name="EscenarioBoss2" type="Sprite2D" parent="."]
position = Vector2(1943, 113)
scale = Vector2(0.847368, 0.847368)
texture = ExtResource("11_n68yg")
flip_h = true

[node name="Piso" type="Node2D" parent="."]
position = Vector2(-58, 113)
scale = Vector2(2.12, 2.12)

[node name="Suelo_temporal_3" type="StaticBody2D" parent="Piso"]
position = Vector2(73.1132, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_3"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_3"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_4" type="StaticBody2D" parent="Piso"]
position = Vector2(120.981, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_4"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_4"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_5" type="StaticBody2D" parent="Piso"]
position = Vector2(168.481, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_5"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_5"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_6" type="StaticBody2D" parent="Piso"]
position = Vector2(216.038, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_6"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_6"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_7" type="StaticBody2D" parent="Piso"]
position = Vector2(263.906, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_7"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_7"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_8" type="StaticBody2D" parent="Piso"]
position = Vector2(311.406, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_8"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_8"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_9" type="StaticBody2D" parent="Piso"]
position = Vector2(358.962, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_9"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_9"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_10" type="StaticBody2D" parent="Piso"]
position = Vector2(406.83, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_10"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_10"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_11" type="StaticBody2D" parent="Piso"]
position = Vector2(454.33, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_11"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_11"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_12" type="StaticBody2D" parent="Piso"]
position = Vector2(501.887, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_12"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_12"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_13" type="StaticBody2D" parent="Piso"]
position = Vector2(549.755, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_13"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_13"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_14" type="StaticBody2D" parent="Piso"]
position = Vector2(597.255, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_14"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_14"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_15" type="StaticBody2D" parent="Piso"]
position = Vector2(644.811, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_15"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_15"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_16" type="StaticBody2D" parent="Piso"]
position = Vector2(692.453, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_16"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_16"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_17" type="StaticBody2D" parent="Piso"]
position = Vector2(740.094, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_17"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_17"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_18" type="StaticBody2D" parent="Piso"]
position = Vector2(787.736, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_18"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_18"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_19" type="StaticBody2D" parent="Piso"]
position = Vector2(835.378, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_19"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_19"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_20" type="StaticBody2D" parent="Piso"]
position = Vector2(883.019, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_20"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_20"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_21" type="StaticBody2D" parent="Piso"]
position = Vector2(930.189, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_21"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_21"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_22" type="StaticBody2D" parent="Piso"]
position = Vector2(977.831, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_22"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_22"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_23" type="StaticBody2D" parent="Piso"]
position = Vector2(1025.47, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_23"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_23"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Suelo_temporal_24" type="StaticBody2D" parent="Piso"]
position = Vector2(1072.64, -16.0377)

[node name="Sprite2D" type="Sprite2D" parent="Piso/Suelo_temporal_24"]
position = Vector2(-28.0484, 60.25)
scale = Vector2(0.532258, 0.532258)
texture = ExtResource("2_uafuk")
region_enabled = true
region_rect = Rect2(0, 0, 90, 31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piso/Suelo_temporal_24"]
position = Vector2(-28.0484, 60.25)
shape = SubResource("RectangleShape2D_7m0lw")

[node name="Cajas" type="Node2D" parent="."]

[node name="Caja_1" type="StaticBody2D" parent="Cajas"]
position = Vector2(2, 150)
scale = Vector2(0.319999, 0.319999)

[node name="Sprite2D" type="Sprite2D" parent="Cajas/Caja_1"]
position = Vector2(127, 84)
texture = ExtResource("7_g544p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cajas/Caja_1"]
position = Vector2(129.5, 88.5)
shape = SubResource("RectangleShape2D_ex606")

[node name="Caja_2" type="StaticBody2D" parent="Cajas"]
position = Vector2(243, 150)
scale = Vector2(0.319999, 0.319999)

[node name="Sprite2D" type="Sprite2D" parent="Cajas/Caja_2"]
position = Vector2(127, 84)
texture = ExtResource("7_g544p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cajas/Caja_2"]
position = Vector2(129.5, 88.5)
shape = SubResource("RectangleShape2D_ex606")

[node name="Caja_3" type="StaticBody2D" parent="Cajas"]
position = Vector2(134, 97)
scale = Vector2(0.319999, 0.319999)

[node name="Sprite2D" type="Sprite2D" parent="Cajas/Caja_3"]
position = Vector2(127, 84)
texture = ExtResource("7_g544p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cajas/Caja_3"]
position = Vector2(129.5, 88.5)
shape = SubResource("RectangleShape2D_ex606")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Lifebar" type="Panel" parent="UI"]
offset_left = 9.0
offset_top = 9.0
offset_right = 89.0
offset_bottom = 26.0
scale = Vector2(3.19688, 3.19688)

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Lifebar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -6.5
offset_right = 68.0
offset_bottom = 6.5
grow_vertical = 2
scale = Vector2(1.12, 1)

[node name="Vida" type="TextureRect" parent="UI/Lifebar/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("9_af6o5")
expand_mode = 2

[node name="Vida2" type="TextureRect" parent="UI/Lifebar/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("9_af6o5")
expand_mode = 2

[node name="Vida3" type="TextureRect" parent="UI/Lifebar/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("9_af6o5")
expand_mode = 2

[node name="Vida4" type="TextureRect" parent="UI/Lifebar/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("9_af6o5")
expand_mode = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-16, 105)
shape = SubResource("RectangleShape2D_gee31")

[node name="PaneoCamaraBoss" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PaneoCamaraBoss"]
position = Vector2(1576, 109)
shape = SubResource("RectangleShape2D_htmkr")
debug_color = Color(0.647059, 0.364706, 0.247059, 0.717647)

[node name="Paredarena" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_eirb8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredarena"]
position = Vector2(1546, 110)
shape = SubResource("RectangleShape2D_c7sw1")
disabled = true

[node name="Paredarena2" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_eirb8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredarena2"]
position = Vector2(1922.5, 111)
scale = Vector2(1.0048, 1)
shape = SubResource("RectangleShape2D_4vhbl")

[node name="Boss" parent="." instance=ExtResource("16_fxplq")]
position = Vector2(1839, 159)

[connection signal="body_entered" from="Edificios/AreaEdificio" to="." method="_on_area_edificio_body_entered"]
[connection signal="body_exited" from="Edificios/AreaEdificio" to="." method="_on_area_edificio_body_exited"]
[connection signal="body_entered" from="PaneoCamaraBoss" to="." method="_on_paneo_camara_boss_body_entered"]
[connection signal="body_exited" from="PaneoCamaraBoss" to="." method="_on_paneo_camara_boss_body_exited"]
